--- a/deno.jsonc
+++ b/deno.jsonc
@@ -7,5 +7,9 @@
     "fmt": {
         "lineWidth": 120,
         "indentWidth": 4
+    },
+    "imports": {
+        "@cross/deepmerge": "jsr:@cross/deepmerge@^0.0.2",
+        "@cross/runtime": "jsr:@cross/runtime@^0.0.10"
     }
 }
