--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,12 @@
 {
+    "name": "@cross/env",
+    "version": "0.2.1",
+    "exports": "./mod.ts",
+
     "tasks": {
         "test": "deno test --allow-env ./tests/deno.ts",
-        "publish": "deno publish --config jsr.jsonc"
+        "publish": "deno publish --config jsr.jsonc",
+        "publish-dry": "deno publish --dry-run --config jsr.jsonc"
     },
     "lock": false,
     "fmt": {
