--- a/.github/workflows/bun.yml
+++ b/.github/workflows/bun.yml
@@ -1,9 +1,11 @@
+# .github/workflows/bun.yml
 name: Bun CI
 
 on: [push, pull_request]
 
 jobs:
   test:
+    name: Bun Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
