--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,10 +1,11 @@
+# .github/workflows/node.yml
 name: Node.js CI
 
 on: [push, pull_request]
 
 jobs:
   build:
-
+    name: Node Test    
     runs-on: ubuntu-latest
 
     strategy:
