--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-
+    needs: [Bun Test, Deno Test, Node Test]
     permissions:
       contents: read
       id-token: write 
