--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,4 @@ jobs:
     uses: cross-org/workflows/.github/workflows/node-ci.yml@main
     with:
       jsr_dependencies: "@cross/deepmerge @cross/runtime @cross/test @std/assert"
-      test_target: "tests/*.test.ts"
+      test_target: "*.test.ts"
