--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,13 +1,13 @@
 {
     "name": "@cross/env",
-    "version": "0.2.7",
+    "version": "1.0.0",
     "exports": {
         ".": "./mod.ts",
         "./load": "./load.ts"
     },
 
     "tasks": {
-        "test": "cd tests && deno test --allow-env --allow-read",
+        "test": "deno test --allow-env --allow-read",
         "publish-dry": "deno publish --dry-run"
     },
     "lock": false,
@@ -16,8 +16,8 @@
         "indentWidth": 4
     },
     "imports": {
-        "@cross/deepmerge": "jsr:@cross/deepmerge@^0.2.0",
-        "@cross/runtime": "jsr:@cross/runtime@^0.0.17",
+        "@cross/deepmerge": "jsr:@cross/deepmerge@^01.0.0",
+        "@cross/runtime": "jsr:@cross/runtime@^1.0.0",
         "@cross/test": "jsr:@cross/test@^0.0.8",
         "@std/assert": "jsr:@std/assert@^0.219.1"
     }
